kubernetes/atomicassets-api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: atomicassets-api-server
  name: atomicassets-api-server
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: atomicassets-api-server
