kubernetes/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`jungle-aa.edenia.cloud`)
    services:
    - kind: Service
      name: atomicassets-api-server
      port: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`jungle-aa.edenia.cloud`)
    services:
    - kind: Service
      name: atomicassets-api-server
      port: 9000
  tls:
    certResolver: myresolver
